[tool.poetry]
name = "lianapy"
version = "0.1.0"
description = ""
authors = ["Massimiliano Lincetto <m.lincetto@gmail.com>"]
readme = "README.md"
packages = [{include = "lianapy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
