[tool.poetry]
name = "lianapy"
version = "0.1.1"
description = ""
authors = ["Massimiliano Lincetto <m.lincetto@gmail.com>"]
readme = "README.md"
packages = [{include = "lianapy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
ruff = "^0.3.0"
pylint = "^3.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
